--- a/app/(routes)/screens/[screenId]/settlement.module.css
+++ b/app/(routes)/screens/[screenId]/settlement.module.css
@@ -1,3 +1,11 @@
+.screenShell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+}
+
 .wrapper {
   width: 100%;
   display: flex;
